syntax = "proto3";

option csharp_namespace = "BattleShip.Grpc";

package battleship;

service BattleShipService {
  rpc Attack (AttackRequest) returns (AttackReply);
}

message AttackRequest {
  string game_id = 1;
  int32 x = 2;
  int32 y = 3;
}

message AttackReply {
  string game_id = 1;
  string status = 2;
  int32 player_x = 3;
  int32 player_y = 4;
  string player_result = 5;
  int32 ai_x = 6;
  int32 ai_y = 7;
  string ai_result = 8;
}

